[Background Fetch] Reject match() and matchAll()

when:
1. recordsAvailable is false
2. the background fetch is incomplete.

Bug: 882478
Change-Id: Id849a73370f8f07597039c3ccee5efce828fa452
Reviewed-on: https://chromium-review.googlesource.com/1226913
Reviewed-by: Peter Beverloo <peter@chromium.org>
Reviewed-by: Rayan Kanso <rayankans@chromium.org>
Commit-Queue: Mugdha Lakhani <nator@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592032}
Former-commit-id: d9500de510ce05e7148acacd28015f74718171a8